--- a/Runly/Runly/Pages/StepCounter.xaml
+++ b/Runly/Runly/Pages/StepCounter.xaml
@@ -20,7 +20,7 @@
                        HorizontalOptions="CenterAndExpand" 
                        Margin="25"   />
             </Grid>
-            <Button x:Name="btn" Clicked="Button_Cliked" Text="Start" HeightRequest="70" />
+            <Button x:Name="btn" Clicked="Button_Cliked" Text="Start" CornerRadius="5" BorderWidth="0" Clicked="StartTraining" BackgroundColor="#bbf247" FontAttributes="Bold" TextColor="#000" HeightRequest="70" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
