--- a/Runly/Runly/Pages/Settings.xaml
+++ b/Runly/Runly/Pages/Settings.xaml
@@ -18,7 +18,7 @@
                            VerticalOptions="CenterAndExpand" 
                            HorizontalOptions="CenterAndExpand" />
                 </Frame>
-                <Label Grid.Row="1" Text="Nazwa użytkownika" HorizontalOptions="Center" FontAttributes="Bold" TextColor="#192126" FontSize="20" Margin="10" />
+                <Label Grid.Row="1" Text="User name" HorizontalOptions="Center" FontAttributes="Bold" TextColor="#192126" FontSize="20" Margin="10" />
             </Grid>
 
             <Grid Margin="10" Padding="0" RowSpacing="10">
@@ -31,27 +31,37 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
                 
                 <Frame Grid.Row="0" BackgroundColor="#bbf247" CornerRadius="10" HasShadow="True" ></Frame>
-                <Label Grid.Row="0" Text="Nazwa" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
-                <Label Grid.Row="0" Text="User" FontSize="25" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
+                <Label Grid.Row="0" Text="Login" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
+                <StackLayout>
+                    <Entry Grid.Row="0" Text="wpisz swój login" FontSize="20" TextColor="#384147" BackgroundColor="Transparent" HorizontalTextAlignment="End" Opacity="0.8" />
+                </StackLayout>
                 <Button Grid.Row="0" Margin="0" BorderWidth="0" Opacity="0.2" BackgroundColor="#bbf247"/>
 
                 <Frame Grid.Row="1" BackgroundColor="#bbf247" CornerRadius="10" HasShadow="True" ></Frame>
-                <Label Grid.Row="1" Text="Waga" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
-                <Label Grid.Row="1" Text="70" FontSize="25" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
+                <Label Grid.Row="1" Text="Hasło" x:Name="label" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
+                <StackLayout>
+                    <Entry Grid.Row="1" IsPassword="true" Placeholder="wpisz hasło" FontSize="25" TextColor="#384147" BackgroundColor="Transparent" HorizontalTextAlignment="End" Opacity="0.8" />
+                </StackLayout>
                 <Button Grid.Row="1" Margin="0" BorderWidth="0" Opacity="0.2" BackgroundColor="#bbf247"/>
 
                 <Frame Grid.Row="2" BackgroundColor="#bbf247" CornerRadius="10" HasShadow="True" ></Frame>
-                <Label Grid.Row="2" Text="Wiek" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
-                <Label Grid.Row="2" Text="20" FontSize="25" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
+                <Label Grid.Row="2" Text="Waga" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
+                <Label Grid.Row="2" Text="70" FontSize="20" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
                 <Button Grid.Row="2" Margin="0" BorderWidth="0" Opacity="0.2" BackgroundColor="#bbf247"/>
 
                 <Frame Grid.Row="3" BackgroundColor="#bbf247" CornerRadius="10" HasShadow="True" ></Frame>
-                <Label Grid.Row="3" Text="Opcja" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
-                <Label Grid.Row="3" Text="Value" FontSize="25" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
+                <Label Grid.Row="3" Text="Wiek" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
+                <Label Grid.Row="3" Text="20" FontSize="20" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
                 <Button Grid.Row="3" Margin="0" BorderWidth="0" Opacity="0.2" BackgroundColor="#bbf247"/>
+
+                <Frame Grid.Row="4" BackgroundColor="#bbf247" CornerRadius="10" HasShadow="True" ></Frame>
+                <Label Grid.Row="4" Text="Opcja" FontSize="25" TextColor="#192126" BackgroundColor="Transparent" Padding="15"/>
+                <Label Grid.Row="4" Text="Value" FontSize="20" TextColor="#384147" BackgroundColor="Transparent" Padding="15" HorizontalTextAlignment="End" Opacity="0.8" />
+                <Button Grid.Row="4" Margin="0" BorderWidth="0" Opacity="0.2" BackgroundColor="#bbf247"/>
 
             </Grid>
 
